# argent-contracts-starknet

./: .cairofmtignore  .env.example  .eslintrc.json  .gitignore  .mocharc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .tool-versions  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  Scarb.toml  acc.json  account.json  book.toml  gas-report-new.txt  gas-report.txt  hardhat.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test-output.txt  test.sierra  test_casm.json  test_sierra.json  tsconfig.json
.snfoundry_cache/: .prev_tests_failed
contracts/: AccountDetector.cairo  Argent2Account.cairo  ArgentAccount.cairo  ArgentAccount2.cairo  ArgentDefaultAccount.cairo  ArgentPluginAccount.cairo  ERC20.cairo  Game.cairo  Initializable.cairo  Multicall.cairo  PluginStorage.cairo  Proxy.cairo  SessionKey.cairo  StructHash.cairo  TestDapp.cairo  Upgradable.cairo  argent_account.cairo  argent_multisig_account.cairo  argent_multisig_storage.cairo  asserts.cairo  cairo_project.toml  call_arrays_serde.cairo  call_arrays_serde_outside.cairo  call_arrays_serde_script.cairo  calls.cairo  dummy_syscalls copy.cairo  dummy_syscalls.cairo  escape.cairo  foo_arrays.cairo  gas.cairo  lib.cairo  multicall.cairo  signer_signature.cairo  signer_storage.cairo  signers_storage.cairo  spans.cairo  struct_in_contract.cairo  struct_in_serde.cairo  struct_outside_contract.cairo  struct_outside_contract_old.cairo  (+13 more)
deploy/: deploy.js  package-lock.json  package.json  transfer.js
deployments/: account.txt  multicall.txt  multisig.txt
docs/: CHANGELOG_argent_account.md  CHANGELOG_multisig.md  README.md  SUMMARY.md  accurate_estimates.md  argent_account.md  argent_account_escape.md  argent_account_recovery.md  argent_account_upgrades.md  argent_multisig.md  deployments.md  development.md  multisig.md  multisig_recovery.md  outside_execution.md  owner_alive.md  sessions.md  signers_and_signature.md  signers_and_signatures.md  webauthn.md
lib/: accounts.ts  cache.ts  contracts.ts  devnet.ts  events.ts  expectations.ts  gas.ts  index.ts  manager.ts  multisig.ts  openZeppelinAccount.ts  outsideExecution.ts  provider.ts  receipts.ts  recovery.ts  tokens.ts  transactions.ts  udc.ts  upgrade.ts
scripts/: accountProfile.ts  calculate-class-hash.py  calculate-signatures.py  calculate-signatures.ts  calculate-transaction-hash.ts  change-owner-qa.ts  change-owner.ts  check-contract-approvers.ts  check-gas-report.ts  compute-revoke-approvals.ts  contract-approvals.ts  declare-all.ts  deploy-account.ts  deploy-multisig.ts  format-cairo-1.0-contracts.sh  format-title.py  gas-report.ts  generate-signatures.ts  install-cairo-1.0.sh  multisig-change-threshold.ts  new-account-generate.ts  new-account-selfdeploy.ts  print-contract-size.ts  print-snip-12-encodeTypes.ts  profile-account-generic.ts  profile-account-test.ts  profile-account.ts  profile-generic-account.ts  profile-transaction.ts  profile-transfer.ts  query-approvals.ts  query-guid-info.ts  quicktest.ts  run-devnet.sh  send-v1-invoke.ts  send-v3-invoke.ts  sha256-cairo0.ts  start-devnet.sh  test-cairo-1.0-contracts.sh  (+2 more)
(+622 files in other folders)
